# discovery-fm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/discovery_fm/: __init__.py  cli.py  config.py  lastfm.py  spotify.py
